# learning

aruco_testproject/: CAMERA.py  CMakeLists.txt  SIMPLE.py  TODO20220810.txt  aruco.md  board.cpp  calibration.yml  calibration_intelbras.yml  camera.cpp  camera_640x480-2_calibration.yml  camera_640x480-3_calibration.yml  camera_640x480_calibration.yml  camera_board.cpp  camera_hd-2_calibration.yml  camera_hd-3_calibration.yml  camera_hd_calibration.yml  camera_zed copy.cpp  camera_zed.cpp  delaythread.py  dic_4x4-50.txt  ffmpeg.py  img.cpp  run.sh  testes.txt  web.py
aruco_testproject/bufferopencv/: Makefile  bufferopencv  bufferopencv.pro  main.cpp  new_thread.cpp  new_thread.h  run
aruco_testproject/calibration_tests/: calibration-circular.py  calibration.py
aruco_testproject/delay/: Makefile  main.cpp
charuco_diamond/: CMakeLists.txt  Makefile  README.md  calibrate_using_checkerboard.cpp  create_checkerboard.cpp  create_diamond  create_diamond.cpp  detect_diamonds.cpp  detect_diamonds_ip.cpp  detect_diamonds_zed  detect_diamonds_zed.cpp  detector_params.yml  dic.yml  dic_4x4-50.yml  dict_4x4.hpp  utils_aruco.hpp  utils_zed.hpp  zed.cpp
charuco_diamond/mixed/: board_configuration_0.035.yml  main.cpp
debug/: helloworld
ffmpeg/: CMakeLists.txt  Makefile  camera.py  ff2cv.cpp  ff2cv_split.cpp  opencv.cpp  run  simple.cpp  todo.txt
test/: CMakeLists.txt  Makefile  PoseTracker.hpp  arucoest  board_configuration_2.yml  configuration1.yml  configuration3.yml  configuration4.yml  create.cpp  create_board.cpp  detect  detect.cpp  detect_intelbras.cpp  diamond.cpp  diamond.h  dic_4x4-50.dict  dic_4x4-50.yml  dmain.cpp  main  markermap.cpp  markermap.h  mmain.cpp  rot_estimation_main.cpp
